==================================
Rilascio 1.69.28    del 18/05/2015
==================================

Generalizzata la chiamata a "quiver_execute".

==================================
Rilascio 1.69.27    del 16/05/2015
==================================

ryCode: aggiunta la proprietà "uppercase".

ryTabs: aggiunta la proprietà "closable".

==================================
Rilascio 1.69.26    del 14/05/2015
==================================

Passati i parametri alla "RYWINZ.addform" per gestire bene il bottone "Close" di ryTabs.

==================================
Rilascio 1.69.25    del 10/05/2015
==================================

Filbuster: ottimizzate le query e migliorata l'interfaccia ad albero.

ryFamily: perfezionamenti e nuove proprietà.

Miglioramenti nel comportamento di rySource usato stand-alone.

==================================
Rilascio 1.69.24    del 09/05/2015
==================================

Filibuster: ottimizzazione (parziale) query.

ryFamily: fuoco e navigazione (non terminato).

==================================
Rilascio 1.69.23    del 05/05/2015
==================================

Amministrazione pagine Filibuster: aggiunta la modalità di navigazione ad albero.

==================================
Rilascio 1.69.22    del 04/05/2015
==================================

Facilitata la gestione di ryFamily.
Triggerati gli eventi click del mouse e introdotti metodi ed eventi.

==================================
Rilascio 1.69.21    del 02/05/2015
==================================

Rese giuste le dimensioni delle celle  in ryQue e ryUnbound.
Aggiunto un margine alle icone per compensare la riduzione del "top".

RYJAX: aggiunte funzioni utili.

==================================
Rilascio 1.69.20    del 01/05/2015
==================================

ryQue e ryUnbound: cambiato il nome dell'evento "selchange" in "chengesel".
Il nome "selchange" è comunque utilizzabile come alias per compatibilità. 
